--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "connect": "^3.0.0",
+    "exec-sync": "^0.1.6",
     "gift": "^0.4.2",
     "request": "^2.36.0",
     "serve-static": "^1.2.0"
