--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "heroku-badge",
   "version": "0.0.1",
   "dependencies": {
+    "body-parser": "^1.4.3",
     "connect": "^3.0.0",
+    "connect-rest": "^1.1.0",
     "exec-sync": "^0.1.6",
     "gift": "^0.4.2",
     "request": "^2.36.0",
-    "serve-static": "^1.2.0"
+    "serve-static": "^1.2.0",
+    "send": "0.5.0"
   },
   "engines": {
     "node": "0.10.x"
