--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 language: node_js
 node_js:
 - 0.1
-deploy:
-  provider: heroku
-  app: heroku-badge
-  strategy: git
-  api_key:
-    secure: DQS/4k7r6kBdvlC12UdVlvFF71RbbpR+rJpXkmKmWEeuZPCRv4lHd5uboq2UBsHKjsN2J7WrNYqKuFlR84cPnUVEz384N3NoG0ebYzQaxgtV3PVzLYKFuIyd22rtv5JqqrVrC6s7whUgqxYdImI72Yah1q4ADTjRdV6meBBeypE=
-before_deploy:
-- if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+after_failure:
+- wget -O - https://unitcover.herokuapp.com/scripts/upload.sh | bash /dev/stdin pussinboots heroku-softcover "" "xunit.xml"
+after_success:
+- wget -O - https://unitcover.herokuapp.com/scripts/upload.sh | bash /dev/stdin pussinboots unitcover ./target/test-reports/  "test-results.xml test-results-live.xml"
+
