--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ after_success:
 before_install:
  - git clone https://github.com/pussinboots/softcover
  - cd softcover && gem build softcover.gemspec
- - sudo gem install softcover-1.0.beta2.gem
+ - gem install softcover-1.0.beta2.gem
  - cd ..
  - yes "" | sudo apt-add-repository ppa:texlive-backports/ppa
  - sudo apt-get update -qq
